[metadata]
name = nb-check-cells-sequential
version = 0.0.1
description = Check if notebook cells are sequential
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefsmeets/nb-check-cells-sequential
author = Stef Smeets
author_email = s.smeets@esciencecenter.nl
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    nb-check-cells-sequential = nb-check-cells-sequential:main