[metadata]
name = nbcheckorder
version = 0.3.0
description = Check if notebook cells are sequential
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefsmeets/nbcheckorder
author = Stef Smeets
author_email = s.smeets@esciencecenter.nl
license = MIT
license_file = LICENCE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    nbformat
python_requires = >=3.6.1

[options.extras_require]
develop =
    pytest
    pytest-cov

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    nbcheckorder = nbcheckorder:main
